--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-markdown": "^10.1.0",
     "react-dom": "^19.2.4",
     "@google/genai": "^1.40.0",
-    "react": "^19.2.4"
+    "react": "^19.2.4",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
